--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -7,4 +7,4 @@ $mobile-width: 640px;
 $default-color: #282c34;
 $secondary-color: #5F5F5F;
 $disabled-color: #C1C1C1;
-$green-color: #3C8F7D;
+$green-color: #33ccaa;
